# terminusbot

./: .gitignore  Dockerfile  README.md  app.py  config.py  nginx.conf  pyproject.toml  query.py  requirements.txt  run.py  tailwind.config.js  terminusbot.conf  testing.py  uuid.txt  wsgi.py
auth/: __init__.py  app.py  data.json  query.py  search.py  session.py  test.py  url.py  validate.py
client/: __init__.py  create_user.py  creds.py  emailuser.html  emailuser.py  flags.py  form.py  formdata.py  session.py  unit.py  user.py  vin.py
client/qr/: generator.py
data/: __init__.py  googlesheets.py  terminusquickbooks.py
integrations/googlesheets/: session.py  sheetconfig.py
integrations/lightmetrics/: auth.py  errors.py
integrations/mailchimp/: api.py
integrations/twiliophone/: caller.py
login/: __init__.py
login/auth/: app.py
official/: __init__.py
qr/: __init__.py  generator.py
quickbooks/: __init__.py  session.py
static/main/: input.css  main.css  main.js
templates/: create-unit-results.html  create-unit.html  debug.html  emailsignup.html  emailuser.html  get.html  index.html  register-old.html  register.html  registration-test.html  rejected.html  response.html  response.raw.html  search-results.html  search.html  submit.html
templates/partials/: emailsignup.html  field.html  validate.html
templates/user/: register.html
tests/: post.py  validation.py
user/: create_user.py  errors.py
utils/: mask.py
webhooks/: __init__.py  errors.py  events.py  message.py  notifier.py  phonealert.py  phonecall.py  phonemessage.py
