[project]
name = "terminusgps-wialon"
version = "0.0.1"
requires-python = ">=3.11.0"
readme = "README.md"

description = "Automatically create user credentials and assign products for TerminusGPS clients."
authors = [
    { name = "Blake Nall", email = "blake@terminusgps.com" },
    { name = "Lili Noack", email = "lili@terminusgps.com" },
]

[tool.pyright]
include = ["wialon"]
ignore = ["wialon/experimental"]

pythonVersion = requires-python
pythonPlatform = "Linux"

executionEnvironments = [
    { root = "wialon", pythonVersion = ">=3.11.0", pythonPlatform = "Linux" },
]
