[project]
name = "terminusbot"
version = "1.0.2"
requires-python = ">=3.11.0"
readme = "README.md"

description = "Automatically create user credentials and assign products for TerminusGPS clients."
authors = [
    { name = "Blake Nall", email = "blake@terminusgps.com" },
    { name = "Lili Noack", email = "lili@terminusgps.com" },
]

[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
